# Magix

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: api.rs  lib.rs
src/dom/: attach.rs  mod.rs  utils.rs
src/editor/: filters.rs  history.rs  loader.rs  mod.rs  state.rs
